finished applying styles for mobile

--- a/index.html
+++ b/index.html
@@ -681,33 +681,64 @@
               </figure>
             </a></div>
           <div class="slide" id='slide-3'><a
-            href="https://www.bbc.co.uk/iplayer/episode/m000jsy4/mirror-mirror-series-2-episode-1?xtor=CS8-1000-[Discovery_Cards]-[Multi_Site]-[SL02]-[PS_IPLAYER~C~~P_MirrorMirror]">
-            <figure><img class='story-img' src="images/hairdressers.jpg" alt="barber cutting hair"><span
-                class='iplayer-icon'><img src="images/iplayer.png" width="50" height="50"
-                  alt="BBC iPlayer icon"></span>
-              <figcaption>
-                <h3 class='story-caption bunched-text'>What really goes on at a hairdressers?
-                </h3>
-                <h4 class='story-footnote-tag story-link'>BBC iPlayer</h4>
-              </figcaption>
-            </figure>
-          </a></div>
+              href="https://www.bbc.co.uk/iplayer/episode/m000jsy4/mirror-mirror-series-2-episode-1?xtor=CS8-1000-[Discovery_Cards]-[Multi_Site]-[SL02]-[PS_IPLAYER~C~~P_MirrorMirror]">
+              <figure><img class='story-img' src="images/hairdressers.jpg" alt="barber cutting hair"><span
+                  class='iplayer-icon'><img src="images/iplayer.png" width="50" height="50"
+                    alt="BBC iPlayer icon"></span>
+                <figcaption>
+                  <h3 class='story-caption bunched-text'>What really goes on at a hairdressers?
+                  </h3>
+                  <h4 class='story-footnote-tag story-link'>BBC iPlayer</h4>
+                </figcaption>
+              </figure>
+            </a></div>
           <div class="slide" id='slide-4'><a
-            href="https://www.bbc.co.uk/iplayer/episode/m000jjn8/a-house-through-time-series-3-episode-1?xtor=CS8-1000-[Discovery_Cards]-[Multi_Site]-[SL02]-[PS_IPLAYER~C~~P_AHouseThroughTime]">
-            <figure><img class='story-img' src="images/housechange.jpg" alt="BBC documentary series A House Through Time presenter"><span
-                class='iplayer-icon'><img src="images/iplayer.png" width="50" height="50"
-                  alt="BBC iPlayer icon"></span>
-              <figcaption>
-                <h3 class='story-caption bunched-text'>How does a house change through time?
-                </h3>
-                <h4 class='story-footnote-tag story-link'>BBC iPlayer</h4>
-              </figcaption>
-            </figure>
-          </a></div>
+              href="https://www.bbc.co.uk/iplayer/episode/m000jjn8/a-house-through-time-series-3-episode-1?xtor=CS8-1000-[Discovery_Cards]-[Multi_Site]-[SL02]-[PS_IPLAYER~C~~P_AHouseThroughTime]">
+              <figure><img class='story-img' src="images/housechange.jpg"
+                  alt="BBC documentary series A House Through Time presenter"><span class='iplayer-icon'><img
+                    src="images/iplayer.png" width="50" height="50" alt="BBC iPlayer icon"></span>
+                <figcaption>
+                  <h3 class='story-caption bunched-text'>How does a house change through time?
+                  </h3>
+                  <h4 class='story-footnote-tag story-link'>BBC iPlayer</h4>
+                </figcaption>
+              </figure>
+            </a></div>
         </div>
       </div>
     </article>
-    <div id="primary-footer"></div>
+    <div id="primary-footer">
+      <ul id="footer-links">
+        <li class="footer-link"><a href='http://www.bbc.co.uk/news/'>News</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/sport/'>Sport</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/weather/'>Weather</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/iplayer/'>iPlayer</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/tv/'>TV</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/radio/'>Radio</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/cbbc'>CBBC</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/cbeebies'>CBeebies</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/food/'>Food</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/iwonder'>iWonder</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/education'>Bitesize</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/travel/'>Travel</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/music/'>Music</a></li>
+        <li class="footer-link"><a href='http://www.bbc.com/earth/'>Earth</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/arts/'>Arts</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/makeitdigital'>Make It Digital</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/taster'>Taster</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/local/'>Local</a></li>
+      </ul>
+      <ul id="footer-linkz">
+        <li class="footer-link"><a href='http://www.bbc.co.uk/terms/'>Terms of Use</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/aboutthebbc/'>About the BBC</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/privacy/'>Privacy Policy</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/privacy/cookies/about'>Cookies</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/accessibility/'>Accessibility Help</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/guidance/'>Parental Guidance</a></li>
+        <li class="footer-link"><a href='http://www.bbc.co.uk/contact/'>Contact the BBC</a></li>
+      </ul>
+      <p id='copyright'><strong>Copyright © 2016 BBC.</strong> The BBC is not responsible for the content of external sites. <strong><a href="http://www.bbc.co.uk/help/web/links/">Read about our approach to external linking.</a></strong></p>
+    </div>
   </footer>
 </body>
 
