fixed img srcs X 2

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             href="http://www.bbc.co.uk/news/science_and_environment">Science & Environment</a></span>
       </div>
       <div class="headline also-story">
-        <img id='snoop-img' src="images/_snoop.jpg" alt="Snoop Dogg">
+        <img id='snoop-img' src="images/snoop.jpg" alt="Snoop Dogg">
         <h2 class='mini-story-caption also-caption'><a href="http://www.bbc.co.uk/newsbeat/articles/35313618"><span
               id='newsbeat-badge'>Newsbeat</span> Why Snoop was mad at Xbox</a></h2>
         <span class='story-footnote-tag story-link mini-story-footnote'>14 January 2016 <span
@@ -281,7 +281,7 @@
         </figure>
       </div>
       <div class="headline">
-        <figure><img class='story-img' id='wall-e-img' src="images/_wall-e.jpeg" alt="Wall-E">
+        <figure><img class='story-img' id='wall-e-img' src="images/wall-e.jpeg" alt="Wall-E">
           <figcaption>
             <h4 class='story-caption bunched-text'><a href="http://www.bbc.co.uk/news/business-35279854">A Wall-E
                 world?</a></h4>Can
