styled nav for 600px+

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="images/bbc-favicon.ico">
-  <title>Technologys - BBC News</title>
+  <title>Technology - BBC News</title>
 
   <link rel="stylesheet" href="styles/styles.css">
 
@@ -29,6 +29,7 @@
         <li id='tv-link'><a class='navbar-link' href="https://www.bbc.co.uk/iplayer/guide">TV</a></li>
         <li id='radio-link'><a class='navbar-link' href="https://www.bbc.co.uk/sounds">Radio</a></li>
         <li id='more-link'><a class='navbar-link' href="https://www.bbc.com/news/technology#orb-footer">More</a></li>
+        <li id='search-input'><input type="search" name="search" id="search" placeholder = 'Search'><a class='navbar-link' href="https://www.bbc.co.uk/search?q="><img id = 'search-input-icon' src="images/orb-search-dark.png" alt="magnifying glass search icon"></a></li>
         <li><a class='navbar-link' href="https://www.bbc.co.uk/search?q="><img src="images/orb-search-dark.png"
               id='search-icon' alt="magnifying glass search icon"></a></li>
       </ul>
