styled header tabs across all screen sizes

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
           <li id='more-link'>
-            <label for="toggle">More <span id='more-slider-triangle'></span></label></li>
+            <label for="toggle">More <span class='more-slider-triangle'></span></label></li>
           <li id='search-input'><input type="search" name="search" id="search" placeholder='Search'><a
               class='navbar-link' href="https://www.bbc.co.uk/search?q="><img id='search-input-icon'
                 src="images/orb-search-dark.png" alt="magnifying glass search icon"></a></li>
@@ -68,6 +68,25 @@
     </div>
     <div id="header-divider"><a href="http://www.bbc.co.uk/news">
         <img id='news-logo' src="images/bbc-news-logo-light.png" alt="News logo"></a>
+    </div>
+    <div id="header-tabs">
+      <ul id="tabs-list">
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news"><span>Home</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/coronavirus"><span>Coronavirus</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/video_and_audio/headlines"><span>Video</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/world"><span>World</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/uk"><span>UK</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/business"><span>Business</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/technology" active><span>Technology</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/science_and_environment"><span>Science</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/stories"><span>Stories</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/entertainment_and_arts"><span>Entertainment & Arts</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/health"><span>Health</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/world_radio_and_tv"><span>World News TV</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/in_pictures"><span>In Pictures</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/reality_check"><span>Reality Check</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href=""><span>More </span></a></li>
+      </ul>
     </div>
     <div class="main-headline">
       <h3>Technology</h3>
