styled header-tabs-dropdown panel for all screens

--- a/index.html
+++ b/index.html
@@ -69,23 +69,50 @@
     <div id="header-divider"><a href="http://www.bbc.co.uk/news">
         <img id='news-logo' src="images/bbc-news-logo-light.png" alt="News logo"></a>
     </div>
+    <input type="checkbox" name="toggle" id="toggled" />
     <div id="header-tabs">
       <ul id="tabs-list">
         <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news"><span>Home</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/coronavirus"><span>Coronavirus</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/video_and_audio/headlines"><span>Video</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/world"><span>World</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link'
+            href="https://www.bbc.com/news/coronavirus"><span>Coronavirus</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link'
+            href="https://www.bbc.com/news/video_and_audio/headlines"><span>Video</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/world"><span>World</span></a>
+        </li>
         <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/uk"><span>UK</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/business"><span>Business</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/technology" active><span>Technology</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/science_and_environment"><span>Science</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/stories"><span>Stories</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/entertainment_and_arts"><span>Entertainment & Arts</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/health"><span>Health</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/world_radio_and_tv"><span>World News TV</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/in_pictures"><span>In Pictures</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/reality_check"><span>Reality Check</span></a></li>
-        <li class="tabs-list-item"><a class='tabs-link' href=""><span>More </span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link'
+            href="https://www.bbc.com/news/business"><span>Business</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/technology"
+            active><span>Technology</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link'
+            href="https://www.bbc.com/news/science_and_environment"><span>Science</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/stories"><span>Stories</span></a>
+        </li>
+        <li class="tabs-list-item"><a class='tabs-link'
+            href="https://www.bbc.com/news/entertainment_and_arts"><span>Entertainment & Arts</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/health"><span>Health</span></a>
+        </li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/world_radio_and_tv"><span>World
+              News TV</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/in_pictures"><span>In
+              Pictures</span></a></li>
+        <li class="tabs-list-item"><a class='tabs-link' href="https://www.bbc.com/news/reality_check"><span>Reality
+              Check</span></a></li>
+        <li class="tabs-list-item"><label for="toggled"><span>More </span></label></li>
+      </ul>
+    </div>
+    <div id="header-tabs-dropdown">
+      <ul id="header-tabs-dropdown-list">
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/science_and_environment">Science</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/stories">Stories</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/entertainment_and_arts">Entertainment & Arts</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/health">Health</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/world_radio_and_tv">World News TV</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/in_pictures">In Pictures</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/reality_check">Reality Check</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/newsbeat">Newsbeat</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/special_reports">Special Reports</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/the_reporters">Long Reads</a></li>
       </ul>
     </div>
     <div class="main-headline">
