started styling main section for tablet & desktop

--- a/index.html
+++ b/index.html
@@ -103,16 +103,26 @@
     </div>
     <div id="header-tabs-dropdown">
       <ul id="header-tabs-dropdown-list">
-        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/science_and_environment">Science</a></li>
-        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/stories">Stories</a></li>
-        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/entertainment_and_arts">Entertainment & Arts</a></li>
-        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/health">Health</a></li>
-        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/world_radio_and_tv">World News TV</a></li>
-        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/in_pictures">In Pictures</a></li>
-        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/reality_check">Reality Check</a></li>
-        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/newsbeat">Newsbeat</a></li>
-        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/special_reports">Special Reports</a></li>
-        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link' href="https://www.bbc.com/news/the_reporters">Long Reads</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link'
+            href="https://www.bbc.com/news/science_and_environment">Science</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link'
+            href="https://www.bbc.com/news/stories">Stories</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link'
+            href="https://www.bbc.com/news/entertainment_and_arts">Entertainment & Arts</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link'
+            href="https://www.bbc.com/news/health">Health</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link'
+            href="https://www.bbc.com/news/world_radio_and_tv">World News TV</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link'
+            href="https://www.bbc.com/news/in_pictures">In Pictures</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link'
+            href="https://www.bbc.com/news/reality_check">Reality Check</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link'
+            href="https://www.bbc.com/news/newsbeat">Newsbeat</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link'
+            href="https://www.bbc.com/news/special_reports">Special Reports</a></li>
+        <li class="header-tabs-dropdown-list-item"><a class='header-tabs-dropdown-link'
+            href="https://www.bbc.com/news/the_reporters">Long Reads</a></li>
       </ul>
     </div>
     <div class="main-headline">
@@ -162,7 +172,7 @@
       </div>
       <hr>
       <div class="headline">
-        <figure><img class='story-img' id='drone-img' src="images/drone germany.jpg"
+        <figure><div class="iframe-container"><iframe src="https://www.youtube.com/embed/MUWipEivCtY" frameborder="0" width='100%' allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div><img class='story-img' id='drone-img' src="images/drone germany.jpg"
             alt="car driving with drone overhead">
           <figcaption id='drone-caption'>
             <h2 class='story-caption'><a href="http://www.bbc.co.uk/news/technology-35351709">Drone lands on moving car
@@ -181,28 +191,30 @@
         </ul>
       </div>
       <hr>
-      <div class="headline">
-        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35351158">Samsung updates sticky
-            stylus holder</a></h2>
-        <span class='story-footnote-tag  story-link mini-story-footnote'>1 hour ago <span
-            class='story-footnote-tag-divider'>|</span> <a
-            href="https://www.bbc.com/news/technology">Technology</a></span>
-      </div>
-      <hr>
-      <div class="headline">
-        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35341528">Minecraft to launch
-            education edition</a></h2>
-        <span class='story-footnote-tag story-link mini-story-footnote'>4 hours ago <span
-            class='story-footnote-tag-divider'>|</span> <a
-            href="https://www.bbc.com/news/technology">Technology</a></span>
-      </div>
-      <hr>
-      <div class="headline">
-        <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35343093">Ask.fm reveals top teen
-            slang</a></h2>
-        <span class='story-footnote-tag story-link mini-story-footnote'>3 hours ago <span
-            class='story-footnote-tag-divider'>|</span> <a
-            href="https://www.bbc.com/news/technology">Technology</a></span>
+      <div class="headline-container">
+        <div class="headline headline-box">
+          <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35351158">Samsung updates sticky
+              stylus holder</a></h2>
+          <span class='story-footnote-tag  story-link mini-story-footnote'>1 hour ago <span
+              class='story-footnote-tag-divider'>|</span> <a
+              href="https://www.bbc.com/news/technology">Technology</a></span>
+        </div>
+        <hr>
+        <div class="headline headline-box">
+          <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35341528">Minecraft to launch
+              education edition</a></h2>
+          <span class='story-footnote-tag story-link mini-story-footnote'>4 hours ago <span
+              class='story-footnote-tag-divider'>|</span> <a
+              href="https://www.bbc.com/news/technology">Technology</a></span>
+        </div>
+        <hr>
+        <div class="headline headline-box">
+          <h2 class='mini-story-caption'><a href="http://www.bbc.co.uk/news/technology-35343093">Ask.fm reveals top teen
+              slang</a></h2>
+          <span class='story-footnote-tag story-link mini-story-footnote'>3 hours ago <span
+              class='story-footnote-tag-divider'>|</span> <a
+              href="https://www.bbc.com/news/technology">Technology</a></span>
+        </div>
       </div>
       <hr>
       <div class="headline">
